# EduAgent

./: .gitignore  README.md  environment.yml  pyproject.toml  test.ipynb
agents/: __init__.py  agent.py  constants.py  workflow.py
agents/central_agent/: __init__.py  agent.py
agents/curriculum/: __init__.py  agent.py  schema.py  workflow.py
agents/curriculum/prompts/: building_prompt_template.txt  system.txt
agents/curriculum_agent/: __init__.py  agent.py
agents/curriculum_agent/individual_tools/: tools.py
agents/data_agent/: __init__.py  agent.py
agents/interaction/: __init__.py  agent.py  schema.py  workflow.py
agents/interaction/prompts/: introduction_template.txt  lesson_presentation_prompt_template.txt  system.txt
agents/interaction_agent/: __init__.py  agent.py
agents/interaction_agent/individual_tools/: tools.py
agents/lesson/: __init__.py  agent.py  schema.py  workflow.py
agents/lesson_agent/: __init__.py  agent.py
agents/quiz_agent/: __init__.py  agent.py
agents/schedule_agent/: __init__.py  agent.py
custom_errors/: __init__.py  database_errors.py  json_errors.py
custom_types/: agentsdict.py  blackboard.py
docker/: docker-compose.all.yml  docker-compose.rag.yml
engine/: dictionaries.py  engine.py  types.py  users.json
graph/: __init__.py  custom_types.py  types.py  workflow.py
rag/: __init__.py  document_chunker.py  factory.py  vectorstore.py  weaviate_vector_database.py
schemas/: __init__.py  curriculum.py  interaction.py  lesson.py
scripts/: setup.sh  teardown.sh
utils/: __init__.py  json_utils.py
(+2 files in other folders)
