[project]
name = "eduagent"
version = "0.1.0"
description = "Multi-agent tutoring assistant"
requires-python = ">=3.12"

dependencies = [
    "docker>=7.1.0",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.8",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "openai>=1.97.1",
    "pip>=25.1.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "weaviate-client>=4.16.7",
]
